backend/k8s/gateway/gateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway
  labels:
    app: gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gateway
  template:
    metadata:
      labels:
        app: gateway
    spec:
      containers:
        - name: gateway
          image: nic01/snkrhub_graphql-gateway:latest
          imagePullPolicy: Always
          volumeMounts:
            - name: supergraph-volume
              mountPath: /etc/config
          ports:
            - containerPort: 3000
      volumes:
        - name: supergraph-volume
          configMap:
            name: supergraph # from kustomization.yaml

---
apiVersion: v1
kind: Service
metadata:
  name: gateway-service
spec:
  selector:
    app: gateway
  ports:
    - port: 3000
      targetPort: 3000

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: router-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    #### THE PROBLEM IS HERE, REMOVE THE DASH FROM http
    - host: snkrhub.xyz
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: gateway-service
                port:
                  number: 3000
